{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 78,
  "lineage": "fed08e54-e554-c10d-c572-262805d3c77c",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "management_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:079390753901:vpc/vpc-0507cfc07a1451a1b",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0c9d1851b5bba5214",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0d98bedb489017153",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0507cfc07a1451a1b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d46e2438459411d8",
            "owner_id": "079390753901",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.log_archive_baseline",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "isolated_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].log_archive",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:469659252241:route-table/rtb-0c7b47736f6ec64c6",
            "id": "rtb-0c7b47736f6ec64c6",
            "owner_id": "469659252241",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0eca16e72315a8ac7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "469659252241",
            "id": "rtb-0c7b47736f6ec64c6",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.log_archive_baseline",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "isolated_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].log_archive",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086b3a88be212d4fa",
            "region": "us-east-1",
            "route_table_id": "rtb-0c7b47736f6ec64c6",
            "subnet_id": "subnet-0ddf1388a80c95a15"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.log_archive_baseline",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "isolated_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].log_archive",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:469659252241:subnet/subnet-0ddf1388a80c95a15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ddf1388a80c95a15",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "469659252241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0eca16e72315a8ac7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "469659252241",
            "id": "subnet-0ddf1388a80c95a15",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.log_archive_baseline",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].log_archive",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:469659252241:vpc/vpc-0eca16e72315a8ac7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-09160e43642131629",
            "default_route_table_id": "rtb-018c4f0a2c59e6850",
            "default_security_group_id": "sg-0c8f464ac61a67cc2",
            "dhcp_options_id": "dopt-068abca1a72e7d7f9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eca16e72315a8ac7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-018c4f0a2c59e6850",
            "owner_id": "469659252241",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "469659252241",
            "id": "vpc-0eca16e72315a8ac7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_organizations_account.log_archive",
            "aws_organizations_organization.org",
            "aws_organizations_organizational_unit.security"
          ]
        }
      ]
    },
    {
      "module": "module.log_archive_baseline",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].log_archive",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:469659252241:vpc-endpoint/vpce-0906408404c073ccb",
            "cidr_blocks": [
              "35.71.70.0/24",
              "3.218.182.0/24",
              "3.218.180.0/23",
              "35.71.68.0/23",
              "52.94.0.0/22",
              "52.119.224.0/20"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0906408404c073ccb",
            "ip_address_type": "ipv4",
            "owner_id": "469659252241",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-02cd2c6b",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0c7b47736f6ec64c6"
            ],
            "service_name": "com.amazonaws.us-east-1.dynamodb",
            "service_region": "us-east-1",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0eca16e72315a8ac7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "469659252241",
            "id": "vpce-0906408404c073ccb",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.log_archive_baseline",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].log_archive",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:469659252241:vpc-endpoint/vpce-09267875671a07d40",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-09267875671a07d40",
            "ip_address_type": "ipv4",
            "owner_id": "469659252241",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0c7b47736f6ec64c6"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0eca16e72315a8ac7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "469659252241",
            "id": "vpce-09267875671a07d40",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.management_baseline",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "isolated_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:079390753901:route-table/rtb-0725d8604d198ad77",
            "id": "rtb-0725d8604d198ad77",
            "owner_id": "079390753901",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0507cfc07a1451a1b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079390753901",
            "id": "rtb-0725d8604d198ad77",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.management_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.management_baseline",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "isolated_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005eb32ea82554f2f",
            "region": "us-east-1",
            "route_table_id": "rtb-0725d8604d198ad77",
            "subnet_id": "subnet-03538bb692ee636ec"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.management_isolated_rt",
            "aws_subnet.management_isolated_subnet",
            "aws_vpc.management_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.management_baseline",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "isolated_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:079390753901:subnet/subnet-03538bb692ee636ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03538bb692ee636ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "079390753901",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0507cfc07a1451a1b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079390753901",
            "id": "subnet-03538bb692ee636ec",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.management_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.management_baseline",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:079390753901:vpc/vpc-0507cfc07a1451a1b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f255fd33454c1ffc",
            "default_route_table_id": "rtb-0d46e2438459411d8",
            "default_security_group_id": "sg-064d7c54c2550f7bd",
            "dhcp_options_id": "dopt-0d98bedb489017153",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0507cfc07a1451a1b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d46e2438459411d8",
            "owner_id": "079390753901",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079390753901",
            "id": "vpc-0507cfc07a1451a1b",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.management_baseline",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:079390753901:vpc-endpoint/vpce-0dae7dd6429331050",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0dae7dd6429331050",
            "ip_address_type": "ipv4",
            "owner_id": "079390753901",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0725d8604d198ad77"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0507cfc07a1451a1b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "079390753901",
            "id": "vpce-0dae7dd6429331050",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.management_isolated_rt",
            "aws_vpc.management_vpc"
          ]
        }
      ]
    }
  ]
}